--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     </div>
                     <div class="card">
                         <img src="./img/walle.jpg" alt="">
-                        <h3>wALL-E</h3>
+                        <h3>WALL-E</h3>
                         <i class="fa-regular fa-circle-play"></i>
                     </div>
                     <div class="card">
